Another test and fix of removing borders in footer on mobile in GreenTheme

--- a/web/themes/custom/fds_green_theme/src/styles/theme/components/_footer.scss
+++ b/web/themes/custom/fds_green_theme/src/styles/theme/components/_footer.scss
@@ -107,8 +107,6 @@ footer {
 
       .menu {
         padding-top: 10px;
-
-        border-top: 1px solid rgba(255, 255, 255, .5);
       }
     }
   }
